# aima_before_30_checker_bot

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: aima_checker.py  config.py  constants.py  crypto.py  database.py  main.py  utils.py
app/routers/: web.py
app/services/: user_service.py
app/telegram_bot/: bot.py  handlers.py  scheduler.py
app/templates/: index.html
